# ubuntuone-credentials

./: .bzrignore  CMakeLists.txt  LICENSE  Makefile  keyring_example  keyring_example.pro  keyring_example.pro.user.5dcbc2d  keyring_example.pro.user.a5c2fb1  main.cpp  ssolib.pro  ssoservice.cpp  ssoservice.h
acl-updater/: CMakeLists.txt  acl-updater  acl-updater.cpp  acl-updater.h
app/: app.pro  main.cpp
core/: com.ubuntu.sso.User.xml  user.cpp  user.h  user_adaptor.h
data/: CMakeLists.txt  ubuntuone.provider  ubuntuone.service  ubuntuone.service-type
dbus/: dbus_helper.cpp  dbus_helper.h  signal_mapper.cpp  signal_mapper.h
debian/: account-plugin-ubuntuone.install  changelog  control  copyright  libubuntuoneauth-2.0-0.install  libubuntuoneauth-2.0-0.migrations  libubuntuoneauth-2.0-0.symbols  libubuntuoneauth-2.0-dev.install  qtdeclarative5-ubuntuone1.0.install  rules  signon-plugin-ubuntuone.install  ubuntuone-credentials-autopilot.install  ubuntuone-credentials-common.install  ubuntuone-credentials.install
keyring/: async_call_data.h  collection.cpp  interface_factory.cpp  interface_factory.h  item.cpp  keyring.cpp  keyring.h  keyring_manager.cpp  keyring_manager.h  keyring_signal_mapper.cpp  keyring_signal_mapper.h  service.h  session.h
lib/: CMakeLists.txt  Makefile  main.cpp  ssolib.pro  ssoservice.cpp  ssoservice.h
lib/core/: user.h
lib/dbus/: dbus_helper.cpp  dbus_helper.h  signal_mapper.cpp
lib/keyring/: async_call_data.h  interface_factory.cpp  interface_factory.h  keyring.cpp  keyring.h  keyring_manager.cpp  keyring_manager.h  keyring_signal_mapper.cpp  keyring_signal_mapper.h  prompt.h
lib/main/: user.h
lib/sso_api/: identityprovider.cpp  identityprovider.h  network.cpp  network.h  requests.cpp  requests.h  responses.cpp  responses.h
libubuntuoneauth/: CMakeLists.txt  accountmanager.cpp  accountmanager.h  authenticator.cpp  authenticator.h  common.h  errormessages.h  identityprovider.cpp  identityprovider.h  keyring.cpp  keyring.h  libubuntuoneauth.symbols  logging.cpp  logging.h  network.cpp  network.h  requests.cpp  requests.h  responses.cpp  responses.h  ssoservice.cpp  ssoservice.h  token.cpp  token.h  ubuntuoneauth.pc.in
libubuntuoneauth/dbus/: signal_mapper.cpp  signal_mapper.h
libubuntuoneauth/examples/: CMakeLists.txt  README  signing-main.cpp  signing.h
libubuntuoneauth/keyring/: async_call_data.h  collection.h  item.h  keyring.cpp  keyring.h  keyring_manager.cpp  prompt.cpp  secret.cpp  secret.h  service.cpp  session.cpp
libubuntuoneauth/main/: generate-dbus-server.sh  user.cpp  user_adaptor.cpp
libubuntuoneauth/secrets/: generate-dbus-secrets-client.sh
libubuntuoneauth/sso_api/: errormessages.h  identityprovider.cpp  identityprovider.h  network.cpp  network.h  requests.cpp  requests.h  responses.cpp  responses.h
libubuntuoneauth/tests/: CMakeLists.txt  main.cpp  mock_sso_server.py.in  test_keyring.cpp  test_keyring.h  test_logging.cpp  test_logging.h  test_requests.cpp  test_requests.h  test_responses.cpp  test_responses.h  test_token.cpp  test_token.h
libubuntuoneauth/tests/keyring/: test_keyring.cpp  test_keyring.h
libubuntuoneauth/tests/sso_api/: test_requests.cpp  test_requests.h  test_responses.cpp  test_responses.h
libubuntuoneauthui/: CMakeLists.txt  authwidget.cpp
libubuntuoneauthui/tests/: CMakeLists.txt  main.cpp
music-login/: CMakeLists.txt  downloader.cpp  downloader.h  error_messages.h  footer.cpp  footer.h  footer.ui  header.cpp  header.h  header.ui  loadingoverlay.cpp  loadingoverlay.h  loadingoverlay.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerform.cpp  registerform.h  registerform.ui  resources.qrc  ssowizard.cpp  ssowizard.h  ssowizard.ui
music-login/qss/: stylesheet.qss
music-login/tests/: CMakeLists.txt  main.cpp  testheader.cpp  testheader.h  testloginform.cpp  testloginform.h  testregisterform.cpp  testregisterform.h  testssowizard.cpp  testssowizard.h
online-accounts-provider/: ButtonRow.qml  CMakeLists.txt  ExistingAccount.qml  LoginForm.qml  Main.qml  NewAccount.qml  RegisterForm.qml  put-on-device.sh  ubuntuone-sharing.service  ubuntuone.provider
online-accounts-provider/tests/: CMakeLists.txt
online-accounts-provider/tests/autopilot/: TestWrapperExisting.qml  TestWrapperNew.qml  run  run_mock_server.py
online-accounts-provider/tests/autopilot/MockServers/: __init__.py
online-accounts-provider/tests/autopilot/UbuntuOneCredentialsProviderAutopilotTests/: TestWrapperNew.qml  __init__.py  emulators.py  test_existing_account.py  test_main.py  test_new_account.py
online-accounts-provider/tests/autopilot/UbuntuOneCredentialsProviderAutopilotTests/main/: test_main.py
online-accounts-provider/tests/autopilot/ubuntuone_credentials/: TestWrapperExisting.qml  TestWrapperNew.qml  __init__.py  base.py  fake_servers.py  fixture_setup.py  test_existing_account.py  test_fixture_setup.py  test_new_account.py
online-accounts-provider/tests/unit/: tst_newaccount.qml  utils.js
po/: CMakeLists.txt  POTFILES.in  aa.po  am.po  ar.po  ast.po  az.po  be.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  gd.po  genpot.sh  gl.po  he.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  km.po  ko.po  ku.po  (+24 more)
qml-credentials-service/: CMakeLists.txt  CredentialsUI.qml  LoginForm.qml  README  RegisterForm.qml  SuccessScreen.qml  TwoFactorForm.qml  libubuntuoneauth.symbols  qmldir.template  ubuntuone_credentials_plugin.cpp  ubuntuone_credentials_plugin.h  ubuntuone_credentials_service.cpp  ubuntuone_credentials_service.h
qml-credentials-service/examples/: embedding.qml  embeddingMain.qml
signon-plugin/: CMakeLists.txt  i18n.cpp  i18n.h  ubuntuone-plugin.cpp  ubuntuone-plugin.h  ubuntuonedata.h
signon-plugin/tests/: CMakeLists.txt  main.cpp  test-plugin.cpp  test-plugin.h  test_plugin.cpp  tst_plugin.cpp
tests/: CMakeLists.txt  Makefile  main.cpp  tests.pro
tests/sso_api/: test_requests.cpp  test_requests.h  test_responses.cpp  test_responses.h
(+9 files in other folders)
